[gd_scene load_steps=10 format=2]

[ext_resource path="res://Assets/Fonts/dogicapixel.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scripts/HUD/HUD_GameOver.gd" type="Script" id=2]
[ext_resource path="res://Assets/Fonts/PixelSplitter-Bold.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Assets/Music/Buttoms/selec0.wav" type="AudioStream" id=4]
[ext_resource path="res://Assets/Music/Buttoms/select1.wav" type="AudioStream" id=5]

[sub_resource type="DynamicFont" id=1]
size = 120
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 30
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.027451, 0.14902, 0.121569, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.0823529, 0.866667, 0.368627, 0.870588 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="HUD_GameOver" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="BackGround" type="ColorRect" parent="."]
modulate = Color( 1, 1, 1, 0.509804 )
margin_left = 256.0
margin_top = -16.0
margin_right = 768.0
margin_bottom = 608.0
color = Color( 0.027451, 0.14902, 0.121569, 0.870588 )

[node name="Texto_GameOver" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -176.0
margin_top = 64.0
margin_right = 196.0
margin_bottom = 193.0
custom_colors/font_color = Color( 0.0823529, 0.866667, 0.368627, 1 )
custom_fonts/font = SubResource( 1 )
text = "GAME
OVER"
align = 1

[node name="IrABase" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -128.0
margin_top = -112.0
margin_right = 128.0
margin_bottom = -67.0
custom_colors/font_color = Color( 0.027451, 0.14902, 0.121569, 1 )
custom_colors/font_color_hover = Color( 0.0823529, 0.866667, 0.368627, 1 )
custom_fonts/font = SubResource( 2 )
custom_styles/hover = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
text = "IR A BASE"
__meta__ = {
"_editor_description_": ""
}

[node name="Reintentar" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -128.0
margin_top = -200.0
margin_right = 128.0
margin_bottom = -155.0
custom_colors/font_color = Color( 0.027451, 0.14902, 0.121569, 1 )
custom_colors/font_color_hover = Color( 0.0823529, 0.866667, 0.368627, 1 )
custom_fonts/font = SubResource( 2 )
custom_styles/hover = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
text = "REINTENTAR"

[node name="sonidoClick" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -20.0

[node name="sonidoMouse" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -20.0

[connection signal="mouse_entered" from="IrABase" to="." method="_on_IrABase_mouse_entered"]
[connection signal="pressed" from="IrABase" to="." method="_on_IrABase_pressed"]
[connection signal="mouse_entered" from="Reintentar" to="." method="_on_Reintentar_mouse_entered"]
[connection signal="pressed" from="Reintentar" to="." method="_on_Reintentar_pressed"]
